--- a/Index.html
+++ b/Index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 
-    <title>Lamar UY</title>
+    <title>Lamar-UY</title>
 </head>
 
 <body class="todo">
